umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_nd.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Nd#n#u4"} :bonds [] :charge 0 :spin "#u4 #s5"}} :counts {:success true :output {:atoms {"0" "Nd#n3"} :bonds [] :charge 0 :spin "#u0 #s1"}}}
