umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_os.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Os#n2#u4"} :bonds [] :charge 0 :spin "#u4 #s5"}} :counts {:success true :output {:atoms {"0" "Os#n4"} :bonds [] :charge 0 :spin "#u0 #s1"}}}
