umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_pb.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Pb#n#u2"} :bonds [] :charge 0 :spin "#u2 #s3"}} :counts {:success true :output {:atoms {"0" "Pb#n2"} :bonds [] :charge 0 :spin "#u0 #s1"}}}
